--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.servlet.context-path=/flights
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mehatremanoj@gmail.com
-spring.mail.password=manoj5544
+spring.mail.username=xyz@gmail.com
+spring.mail.password=xyz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
